[gd_scene load_steps=2 format=3 uid="uid://c1main"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_menu"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_menu")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.05, 0.05, 0.12, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="TitleLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "すごろくオンライン"
horizontal_alignment = 1

[node name="SubtitleLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(0.6, 0.6, 0.7, 1)
text = "最大4人で遊べるオンラインすごろく"
horizontal_alignment = 1

[node name="NameContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="NameLabel" type="Label" parent="CenterContainer/VBoxContainer/NameContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "名前: "

[node name="NameLineEdit" type="LineEdit" parent="CenterContainer/VBoxContainer/NameContainer"]
layout_mode = 2
custom_minimum_size = Vector2(200, 0)
theme_override_font_sizes/font_size = 22
placeholder_text = "プレイヤー名"
max_length = 8

[node name="CreateButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(300, 55)
theme_override_font_sizes/font_size = 26
text = "ルームを作成"

[node name="Separator" type="HSeparator" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(300, 0)
theme_override_styles/separator = null

[node name="JoinContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 10

[node name="CodeLineEdit" type="LineEdit" parent="CenterContainer/VBoxContainer/JoinContainer"]
layout_mode = 2
custom_minimum_size = Vector2(180, 0)
theme_override_font_sizes/font_size = 24
placeholder_text = "ルームコード"
max_length = 5

[node name="JoinButton" type="Button" parent="CenterContainer/VBoxContainer/JoinContainer"]
layout_mode = 2
custom_minimum_size = Vector2(100, 50)
theme_override_font_sizes/font_size = 22
text = "参加"

[node name="StatusLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(1, 0.8, 0.2, 1)
text = ""
horizontal_alignment = 1
